--- a/soccerGame2/app/build.gradle
+++ b/soccerGame2/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:+'
     implementation 'androidx.core:core-ktx:+'
     implementation 'androidx.constraintlayout:constraintlayout:+'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:+'
     androidTestImplementation 'androidx.test.espresso:espresso-core:+'
