--- a/soccerGame2/app/src/main/AndroidManifest.xml
+++ b/soccerGame2/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".team.StandingsActivity"></activity>
+        <activity android:name=".team.StandingTeamActivity"></activity>
         <activity
             android:name=".main.MainActivity"
             android:label="@string/app_name">
